Community DropDown wird jetzt vorausgewählt, falls der Client im FF-Netz hängt

--- a/content_backend/manage_communities.conf
+++ b/content_backend/manage_communities.conf
@@ -8,6 +8,8 @@ use vars qw( %communities );
 	'ffstr' 	=> {
 		'name'  => 'Straelen',
 		'tld'	=> 'ffstr',
+		'ip4_subnet' => '10.229/16',
+		'ip6_subnet' => '2a03:2260:50:7::/64',
 		'ip4_range' => [
 			'10.229.1.1 - 10.229.7.254'
 		],
